zebra-rpc/src/methods/tests/snapshots/get_block_template_long_poll.coinbase_tx@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: coinbase_tx
---
V5(
  network_upgrade: NU5,
  lock_time: Height(Height(0)),
  expiry_height: Height(1687105),
  inputs: [
    Coinbase(
      height: Height(1687105),
      data: [
        4,
        240,
        159,
        140,
        184,
      ],
      sequence: 4294967295,
    ),
  ],
  outputs: [
    Output(
      value: 250000000,
      lock_script: Script("a9147e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e87"),
    ),
    Output(
      value: 15625000,
      lock_script: Script("a914d45cb1adffb5215a42720532a076f02c7c778c9087"),
    ),
    Output(
      value: 21875000,
      lock_script: Script("a91469a9f95a98fe581b6eb52841ef4806dc4402eb9087"),
    ),
    Output(
      value: 25000000,
      lock_script: Script("a914931fec54c1fea86e574462cc32013f5400b8912987"),
    ),
  ],
  sapling_shielded_data: None,
  orchard_shielded_data: None,
)
