zebra-rpc/src/methods/tests/snapshots/get_info@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: info
---
{
  "version": 100,
  "build": "v0.0.1",
  "subversion": "[SubVersion]",
  "protocolversion": 170170,
  "blocks": 10,
  "connections": 0,
  "difficulty": 1.0,
  "testnet": false,
  "paytxfee": 0.0,
  "relayfee": 0.000001,
  "errors": "no errors",
  "errorstimestamp": "[LastErrorTimestamp]"
}
